--- a/ConDr/src/main/webapp/login.html
+++ b/ConDr/src/main/webapp/login.html
@@ -38,6 +38,9 @@
                             <button type="submit" style="width: 100%; font-size:1.1em;" class="btn btn-large btn btn-success btn-lg btn-block" ><b>Login</b></button>
 
                         </form>
+                        <form action="/register.jsp">
+                            <button type="submit" style="width: 100%; font-size:1.1em;" class="btn btn-large btn btn-success btn-lg btn-block" ><b>Register</b></button>
+                        </form>
 
                     </div>
                 </div>
